--- a/package.json
+++ b/package.json
@@ -20,18 +20,25 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.3",
+    "d3": "^7.8.4",
+    "d3-scale": "^4.0.2",
+    "d3-shape": "^3.2.0",
     "i18next": "^22.4.10",
+    "luxon": "^3.3.0",
     "react": "18.2.0",
     "react-i18next": "^12.2.0",
     "react-native": "0.71.4",
     "react-native-config": "^1.5.0",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-haptic-feedback": "^2.0.3",
     "react-native-mmkv": "^2.6.2",
     "react-native-reanimated": "^3.0.2",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
+    "react-native-svg": "^13.9.0",
     "react-redux": "^8.0.5",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "svg-path-properties": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -58,6 +65,7 @@
     "react-native-flipper": "^0.182.0",
     "react-test-renderer": "18.2.0",
     "redux-flipper": "^2.0.2",
+    "redux-mock-store": "^1.5.4",
     "typescript": "4.8.4"
   }
 }
