--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.3",
+    "@shopify/flash-list": "^1.4.2",
+    "@shopify/react-native-skia": "^0.1.185",
     "d3": "^7.8.4",
     "d3-scale": "^4.0.2",
     "d3-shape": "^3.2.0",
@@ -30,9 +32,11 @@
     "react-native": "0.71.4",
     "react-native-config": "^1.5.0",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-graph": "^1.0.1",
     "react-native-haptic-feedback": "^2.0.3",
     "react-native-mmkv": "^2.6.2",
-    "react-native-reanimated": "^3.0.2",
+    "react-native-reanimated": "^2.17.0",
+    "react-native-redash": "^18.1.0",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^13.9.0",
