--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "d3-shape": "^3.2.0",
     "i18next": "^22.4.10",
     "luxon": "^3.3.0",
+    "millify": "^6.1.0",
     "react": "18.2.0",
     "react-i18next": "^12.2.0",
     "react-native": "0.71.4",
