--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "react-native-graph": "^1.0.1",
     "react-native-haptic-feedback": "^2.0.3",
     "react-native-mmkv": "^2.6.2",
-    "react-native-reanimated": "^2.17.0",
+    "react-native-reanimated": "2.16.0",
     "react-native-redash": "^18.1.0",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
@@ -67,7 +67,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.8",
     "prettier": "^2.4.1",
-    "react-native-flipper": "^0.182.0",
+    "react-native-flipper": "^0.163.0",
     "react-test-renderer": "18.2.0",
     "redux-flipper": "^2.0.2",
     "redux-mock-store": "^1.5.4",
