--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-gesture-handler": "^2.9.0",
     "react-native-graph": "^1.0.1",
     "react-native-haptic-feedback": "^2.0.3",
+    "react-native-in-app-review": "^4.3.3",
     "react-native-mmkv": "^2.6.2",
     "react-native-reanimated": "2.16.0",
     "react-native-redash": "^18.1.0",
