--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     >
       <activity
         android:name=".SplashActivity"
-        android:theme="@style/SplashTheme"
+        android:theme="@style/BootTheme"
         android:label="@string/app_name"
         android:exported="true"
       >
