--- a/package.json
+++ b/package.json
@@ -26,17 +26,16 @@
     "d3-scale": "^4.0.2",
     "d3-shape": "^3.2.0",
     "i18next": "^22.4.10",
-    "luxon": "^3.3.0",
     "millify": "^6.1.0",
     "react": "18.2.0",
     "react-i18next": "^12.2.0",
     "react-native": "0.71.4",
+    "react-native-bootsplash": "^4.7.1",
     "react-native-config": "^1.5.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-graph": "^1.0.1",
     "react-native-haptic-feedback": "^2.0.3",
     "react-native-in-app-review": "^4.3.3",
-    "react-native-mmkv": "^2.6.2",
     "react-native-reanimated": "2.16.0",
     "react-native-redash": "^18.1.0",
     "react-native-safe-area-context": "^4.5.1",
