--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@shopify/flash-list": "^1.4.2",
     "@shopify/react-native-skia": "^0.1.185",
+    "@tanstack/react-query": "^4.29.12",
     "axios": "^1.4.0",
     "d3": "^7.8.4",
     "d3-scale": "^4.0.2",
