--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/node": "^18.14.1",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/redux-mock-store": "^1.0.3",
     "babel-jest": "^29.2.1",
     "babel-plugin-inline-dotenv": "^1.7.0",
     "babel-plugin-module-resolver": "^5.0.0",
